@startuml heureka-data

hide circle
skinparam Linetype ortho

entity Category {
    * id: <<autoincrement>>
    ---
    * name: Text
    * picture : Text
}

entity Product {
    * id: <<autoincrement>>
    ---
    * name: Text
    * description : Text
}

entity ProductPhoto {
    * id: <<autoincrement>>
    ---
    * productId : Text
    * source : Text
    * isMain : Boolean
}

entity Store {
    * id: <<autoincrement>>
    ---
    * name: Text
    * eshopAddress : Text
    logo : Text
}

entity StoreProduct {
    * id: <<autoincrement>>
    ---
    * storeId : Text
    * productId : Text
}

entity ProductPrice {
    * id: <<autoincrement>>
    ---
    * storeProductId : Text
    * validFrom : DateTime
    * price : Float
    * currency : Text
}

entity ProductReview {
    * id: <<autoincrement>>
    ---
    * productId : Text
    * userId : Text
    * isPositive : Boolean
    * createdAt : DateTime
    * description : Text
}

entity StoreReview {
    * id: <<autoincrement>>
    ---
    * storeId : Text
    * userId : Text
    * isPositive : Boolean
    * createdAt : DateTime
    * description : Text
}

entity User {
    * id: <<autoincrement>>
    ---
    * username : Text
}

entity ListOfCategories {
    * productId : Text
    * categoryId : Text
}

Category ||..o{ ListOfCategories
ListOfCategories }o..|| Product
Product ||..|{ ProductPhoto
Product ||..o{ StoreProduct
Store ||..o{ StoreProduct
StoreProduct ||..o{ ProductPrice
User ||..o{ StoreReview
User ||..o{ ProductReview
StoreReview }o..|| Store
ProductReview }o..|| Product

@enduml
